# binocular_vision_alg

fromGerardo/ROS_nodes/rh_calibration/: CMakeLists.txt  package.xml  setup.py
fromGerardo/ROS_nodes/rh_calibration/calibrations/CERTH/: out_gripper2camera.xml
fromGerardo/ROS_nodes/rh_calibration/calibrations/CERTH/Images/: README
fromGerardo/ROS_nodes/rh_calibration/calibrations/CVUT/Images/: ReamMe
fromGerardo/ROS_nodes/rh_calibration/calibrations/LOCAL/: camL_to_target.xml  camL_to_target_he.xml  camR_to_target.xml  camR_to_target_he.xml  camera_calibration_left.xml  camera_calibration_right.xml  gripper2target.xml  pointsL_he.xml  pointsR_he.xml  ptu2camera.xml  ptu2robotBase.xml  ptu_positions.xml  robotBase2camLAvg.xml  robotBase2camRAvg.xml  robotBase_to_camL_all.xml  robotBase_to_camR_all.xml  robotBase_to_gripper_L.xml  robotBase_to_gripper_R.xml  robot_poses.py  stereo_calibration.xml
fromGerardo/ROS_nodes/rh_calibration/calibrations/UG/: camL_to_target.xml  camL_to_target_he.xml  camR_to_target.xml  camR_to_target_he.xml  camera_calibration_left.xml  camera_calibration_right.xml  gripper2target.xml  pointsL_he.xml  pointsR_he.xml  ptu2robotBase.xml  ptuL2ptuR.xml  ptu_positions.xml  robotBase2camLAvg.xml  robotBase2camRAvg.xml  robotBase_to_camL_all.xml  robotBase_to_camR_all.xml  robotBase_to_gripper_L.xml  robotBase_to_gripper_R.xml  robot_poses.py  stereo_calibration.xml
fromGerardo/ROS_nodes/rh_calibration/include/rh_calibration/: RHcalibration.h  camera_calibration.h  handeye_calibration.h  parameters.h  settings.h
fromGerardo/ROS_nodes/rh_calibration/launch/: RH_capture_range.launch  RHcalibration_service.launch  RHcalibration_service_CVUT.launch  RHcalibration_simHETransform.launch  RHcalibration_simNodes.launch
fromGerardo/ROS_nodes/rh_calibration/src/: input_images.xml
fromGerardo/ROS_nodes/rh_calibration/src/calibration_nodes/: RH_calibration_service_version.cpp  RH_calibration_smach.py  RHcalibration_young_capture.cpp  camera_calibration.cpp  handeye_calibration.cpp
fromGerardo/ROS_nodes/rh_calibration/src/rh_calibration/: __init__.py  calibration_service.py
fromGerardo/ROS_nodes/rh_calibration/src/utils/: RH_savetfpoints.cpp  get_tranforms.cpp  ls_command  rh_echo.cpp  rh_echo_fixed.cpp
fromGerardo/ROS_nodes/rh_calibration/srv/: CameraCalibration.srv  HandEyeCalibration.srv
fromGerardo/ROS_nodes/rh_cameras/: CMakeLists.txt  package.xml
fromGerardo/ROS_nodes/rh_cameras/calibrations/CERTH/: calL.xml  calR.xml
fromGerardo/ROS_nodes/rh_cameras/calibrations/CVUT/: calL.xml  calR.xml
fromGerardo/ROS_nodes/rh_cameras/calibrations/LOCAL/: calL.xml  calR.xml
fromGerardo/ROS_nodes/rh_cameras/calibrations/UG/: calL.xml  calR.xml  ptu2camera.xml
fromGerardo/ROS_nodes/rh_cameras/include/RHcam/: RHcam.h
fromGerardo/ROS_nodes/rh_cameras/include/Utils/: utils.h
fromGerardo/ROS_nodes/rh_cameras/launch/: RHcam_stereo.launch  RHcam_stereo_simulation.launch  RHcam_stereo_simulation_calib.launch  RHcam_stereo_test.launch
fromGerardo/ROS_nodes/rh_cameras/src/RHcam_resize/: RHcam_resize.cpp
fromGerardo/ROS_nodes/rh_cameras/src/RHcamleft_node/: RHcamleft_node.cpp
fromGerardo/ROS_nodes/rh_cameras/src/RHcamright_node/: RHcamright_node.cpp
fromGerardo/ROS_nodes/rh_cameras/src/extra_functions/: RHcam_saveImgs.cpp  RHcam_test.cpp  detect_cameras.sh
fromGerardo/ROS_nodes/rh_cameras/src/extra_functions/out_images/: README
fromGerardo/ROS_nodes/rh_cameras/src/libRHcam/: RHcam.cpp
fromGerardo/ROS_nodes/rh_cameras/src/simulation/: get_images.cpp  input_images.xml  publishTransform.cpp
fromGerardo/ROS_nodes/rh_cameras/srv/: AcquireSrv.srv  GetCameraInfo.srv  SetCameraInfo.srv
fromGerardo/ROS_nodes/rh_stereo_proc/: CMakeLists.txt  package.xml
fromGerardo/ROS_nodes/rh_stereo_proc/include/rh_stereo_proc/: stereoRectify.h
fromGerardo/ROS_nodes/rh_stereo_proc/launch/: stereoRectifyUnCal.launch
fromGerardo/ROS_nodes/rh_stereo_proc/src/: MatchGPULib.cpp  RHGPU_matcher.cpp  RH_FdispImgTest.cpp  RH_dispImgTest.cpp  getPointCloud.cpp  matcher.py  rectify_imagesUncalibrated.cpp
fromGerardo/ROS_nodes/rh_stereo_proc/src/utils/: get_3dPoints.cpp  publish_images.cpp  range.m
fromGerardo/webcam_driversV4L/: Makefile  NOTES  liblogitech.cpp  liblogitech.h  testMono.cpp  testStereo.cpp
fromGerardo/webcam_driversV4L/Build_Notes/: compile_myVideo  compile_myVideo2  compile_myVideo3  compile_test  compile_v4l2grab  libwebcamNotes
fromGerardo/webcam_driversV4L/PSNR/: Makefile  PSNR  PSNR.cpp  compute_averageIm.m  compute_psnr.m  script_psnr.m
fromGerardo/webcam_driversV4L/READYUV/: readYUVbin.m
fromGerardo/webcam_driversV4L/captureStereo_matlab/: Makefile  captureFromCameras.m  captureStereo  captureStereo.cpp  displayStereo.m
fromGerardo/webcam_driversV4L/libwebcam-0.2.1/libwebcam/: compat.h  dynctrl.c  libwebcam.c
