<?xml version="1.0"?>
<package>
  <name>rh_calibration</name>
  <version>0.0.0</version>
  <description>The rh_calibration package contains camera and hand-eye calibration routined for the CloPeMa robot head</description>

  <maintainer email="ger.ac83@gmail.com">Gerardo Aragon-Camarasas</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>camera_info_manager</build_depend>
<!--  <build_depend>clopema_smach</build_depend>-->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>rh_cameras</build_depend>
  <build_depend>rh_ptu</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
<!--  <build_depend>visp_hand2eye_calibration</build_depend>-->
<!--  <build_depend>visp</build_depend>-->
<!--  <build_depend>visp_bridge</build_depend>-->
  <build_depend>rh_integration</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>camera_info_manager</run_depend>
<!--  <run_depend>clopema_smach</run_depend>-->
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>rh_cameras</run_depend>
  <run_depend>rh_ptu</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
<!--  <run_depend>visp_hand2eye_calibration</run_depend>-->
<!--  <run_depend>visp</run_depend>-->
<!--  <run_depend>visp_bridge</run_depend>-->
  <run_depend>rh_integration</run_depend>

</package>
