<?xml version="1.0"?>
<package>
  <name>rh_stereo_proc</name>
  <version>0.0.0</version>
  <description>The rh_stereo_proc package that contains the C3D stereo matcher in java, vector pascal and gpu. It also containes nodes to compute point clouds and to rectify uncalibrated images</description>
  
  <maintainer email="ger.ac83@gmail.com">Gerardo Aragon</maintainer>  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rh_feature_extraction</build_depend>
  <build_depend>rh_vergence</build_depend>
  <build_depend>rh_cameras</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>stereo_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>rh_feature_extraction</run_depend>
  <run_depend>rh_cameras</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>rh_vergence</run_depend>
  <run_depend>stereo_msgs</run_depend>

</package>
